@@ -2,7 +2,7 @@
 # Graph tests - graph command basics
 # Copyright (c) 2006 Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
-# RCS: @(#) $Id: command.test,v 1.3 2008/10/11 23:23:48 andreas_kupries Exp $
+# RCS: @(#) $Id: command.test,v 1.4 2008/10/17 05:09:43 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 # Wrong # args: Missing, Too many
@@ -83,6 +83,34 @@ test graph-${impl}-${setimpl}-create-3.3 {graph create, copy, value} {
 test graph-${impl}-${setimpl}-create-3.4 {graph create, copy, graph} {
     catch {mygraph destroy}
     set serial {%3 {} {{f 6 {}}} %0 {foo bar} {{a 6 {}} {b 9 {bar snarf}} {c 0 {}}} %1 {} {{d 9 {}}} %2 {} {{e 0 {}}} {data foo}}
+
+    graph mygraph deserialize $serial
+    graph bgraph = mygraph
+
+    set result [validate_serial bgraph $serial]
+    mygraph destroy
+    bgraph  destroy
+
+    set result
+} ok
+
+test graph-${impl}-${setimpl}-create-3.5 {graph create, copy, graph with weights} {
+    catch {mygraph destroy}
+    set serial {%3 {} {{f 6 {}}} %0 {foo bar} {{a 6 {}} {b 9 {bar snarf}} {c 0 {} 222}} %1 {} {{d 9 {}}} %2 {} {{e 0 {} 444}} {data foo}}
+
+    graph mygraph deserialize $serial
+    graph bgraph = mygraph
+
+    set result [validate_serial bgraph $serial]
+    mygraph destroy
+    bgraph  destroy
+
+    set result
+} ok
+
+test graph-${impl}-${setimpl}-create-3.6 {graph create, copy, empty graph} {
+    catch {mygraph destroy}
+    set serial {{}}
 
     graph mygraph deserialize $serial
     graph bgraph = mygraph
